@@ -1,0 +1,43 @@
+--  Licensed to the Apache Software Foundation (ASF) under one
+--  or more contributor license agreements.  See the NOTICE file
+--  distributed with this work for additional information
+-- regarding copyright ownership.  The ASF licenses this file
+--  to you under the Apache License, Version 2.0 (the
+--  "License"); you may not use this file except in compliance
+--  with the License.  You may obtain a copy of the License at
+--
+--    http://www.apache.org/licenses/LICENSE-2.0
+--
+--  Unless required by applicable law or agreed to in writing,
+--  software distributed under the License is distributed on an
+--  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+--  KIND, either express or implied.  See the License for the
+--  specific language governing permissions and limitations
+--  under the License.
+
+CREATE SCHEMA SCHEMA_01;
+SET SCHEMA SCHEMA_01;
+
+CREATE TABLE SCHEMA_01.A (
+    ID INTEGER NOT NULL,
+    PRIMARY KEY (ID)
+);
+
+CREATE TABLE SCHEMA_01.B (
+    ID INTEGER NOT NULL,
+    PRIMARY KEY (ID)
+);
+
+CREATE TABLE SCHEMA_01.A_B (
+    A_ID INTEGER NOT NULL,
+    B_ID INTEGER NOT NULL
+    ,PRIMARY KEY (A_ID, B_ID)
+);
+
+ALTER TABLE SCHEMA_01.A_B
+    ADD FOREIGN KEY (A_ID)
+    REFERENCES SCHEMA_01.A (ID);
+
+ALTER TABLE SCHEMA_01.A_B
+    ADD FOREIGN KEY (B_ID)
+    REFERENCES SCHEMA_01.B (ID);
